# ArknightsVideoPipeline

./: .gitignore  README.md  gui.py  main.py  pyproject.toml  requirements.txt
docs/: cli_reference.md  configuration.md  gui_guide.md  quick_start_cli.md
script/: __init__.py
script/build_exe/: README.md  __init__.py  __main__.py  analyzer.py  builder.py  launchers.py  runtime_hook.py
src/arknights_video_pipeline/: __init__.py
src/arknights_video_pipeline/core/: __init__.py  actions_to_text.py  config.py  exceptions.py  formation_to_text.py  logger.py  pipeline.py  step_defs.py  track_startbutton.py  types.py  utils.py  video_compose.py  video_compose_common.py  video_compose_style2.py  video_to_copilot.py
src/arknights_video_pipeline/gui/: __init__.py  app.py  main_window.py
src/arknights_video_pipeline/gui/assets/: __init__.py
src/arknights_video_pipeline/gui/assets/icons/: __init__.py  nav_icons.py
src/arknights_video_pipeline/gui/components/: __init__.py  about_dialog.py  file_selector.py  log_viewer.py  material_button.py  material_card.py  material_checkbox.py  material_switch.py  message_dialog.py  navigation_rail.py  progress_card.py  settings_page.py  step_panel.py
src/arknights_video_pipeline/gui/theme/: __init__.py  button_qss.py  colors.py  styles.py  typography.py
src/arknights_video_pipeline/gui/workers/: __init__.py  pipeline_worker.py
src/arknights_video_pipeline/service/: __init__.py  config_proxy.py  pipeline_service.py  pipeline_worker.py  report_model.py
